Added the What we do page, changed the People page layout.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ website:
   navbar:
     logo: "logo.png"
     left:
+      - whatwedo.qmd
       - people.qmd
       - projects.qmd
       - publications.qmd
