--- a/publications.yml
+++ b/publications.yml
@@ -1,3 +1,24 @@
-- Publication: "Placeholder, B., (2025). Example of an article title. _Journal_."
+- Publication: "Gerwien, J., Filip, M., & Smolík, F. (2024). Noun imageability and the processing of sensory-based information. _Quarterly Journal of Experimental Psychology_, _77_(10), 2137-2150."
+  Year: 2024
+  categories: []
+- Publication: "Smolik, F., & Chromá, A. (2023). About me, you and her: Personal pronouns are developmentally preceded by mental state language. _Journal of Child Language_, _50_(3), 537-554."
+  Year: 2023
+  categories: []
+- Publication: "Smolík, F., & Bláhová, V. (2022). Here come the nouns: Czech two-year-olds use verb number endings to predict sentence subjects. _Cognition_, _219_, 104964."
+  Year: 2022
+  categories: []
+- Publication: "Smolík, F., & Matiasovitsová, K. (2021). Sentence imitation with masked morphemes in Czech: Memory, morpheme frequency, and morphological richness. _Journal of Speech, Language, and Hearing Research_, _64_(1), 105-120."
+  Year: 2021
+  categories: []
+- Publication: "Smolík, F., & Bláhová, V. (2019). Czech 23-month-olds use gender agreement to anticipate upcoming nouns. _Journal of Experimental Child Psychology_, _178_, 251-265."
+  Year: 2019
+  categories: []
+- Publication: "Smolík, F. (2015). Word order and information structure in Czech 3-and 4-year-olds’ comprehension. _First language_, _35_(3), 237-253."
+  Year: 2015
+  categories: []
+- Publication: "Matiasovitsová, K., Čechová, P., Sláma, J., Homolková, K., & Smolík, F. (2024). Mean Length of Utterance in Czech Toddlers: Validity Estimates and Comparison of Words, Morphemes, and Syllables. Journal of Speech, Language, and Hearing Research, _67_(3), 837-852."
+  Year: 2024
+  categories: []
+- Publication: "Chromá, A., Sláma, J., Matiasovitsová, K., & Treichelová, J. (2025). A morphologically tagged longitudinal corpus of spoken Czech child-adult interactions. _Language Resources and Evaluation_, _59_(1), 413-436."
   Year: 2025
-  categories: ["TBD"]
+  categories: []
