Restructured the site structure - Moved the images to a separate folder - Added pdf files - Added links to the pdf files in the Publications and presentations pane - Added a member bio

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 website:
   title: "EAGLeLab"
   navbar:
-    logo: "logo.png"
+    logo: "/images/logo.png"
     left:
       - whatwedo.qmd
       - people.qmd
