Added project-related information

--- a/projects.yml
+++ b/projects.yml
@@ -1,8 +1,18 @@
-- Title: "Sample project title"
+- Title: "A lifetime with language: the nature and ontogeny of linguistic communication (LangInLife)"
+  Notes: "Work package 1 - Language in Childhood: Language Acquisition and Early Language Development (Partners: Masaryk University, Faculty of Arts, Brno - lead partner; CEITEC MU, Brno; Charles University, Faculty of Arts, Prague)"
   Start: 2025
-  End: 2025
-  ID: ABCD
-- Title: "Another sample project title"
+  End: 2028
+  ID: "CZ.02.01.01/00/23_025/0008726"
+  Funder: "Ministry of Education, Czech Republic, [Programme Johannes Amos Comenius](https://opjak.cz/en/)"
+- Title: "Mediated Society (MEDIS:ON)"
+  Notes: "Part of WP1 (Institute of Psychology CAS is the leading partner; other partners: Masaryk University, Palacký University Olomouc, Brno University of Technology)"
   Start: 2025
-  End: 2025
-  ID: EFGH
+  End: 2028
+  ID: "CZ.02.01.01/00/23_025/0008713"
+  Funder: "Ministry of Education, Czech Republic, [Programme Johannes Amos Comenius](https://opjak.cz/en/)"
+- Title: "Sentence structure prediction and prediction error in Czech language acquisition"
+  Notes: "PI: Filip Smolík, no external parthers"
+  Start: 2025
+  End: 2027
+  ID: "CZ.02.01.01/00/23_025/0008713"
+  Funder: "[Czech Science Foundation (GACR)](gacr.cz/en/)"
