--- a/projects.yml
+++ b/projects.yml
@@ -11,7 +11,7 @@
   ID: "CZ.02.01.01/00/23_025/0008713"
   Funder: "Ministry of Education, Czech Republic, [Programme Johannes Amos Comenius](https://opjak.cz/en/)"
 - Title: "Sentence structure prediction and prediction error in Czech language acquisition"
-  Notes: "PI: Filip Smolík, no external parthers"
+  Notes: "PI: Filip Smolík, no external partners"
   Start: 2025
   End: 2027
   ID: "CZ.02.01.01/00/23_025/0008713"
