Activated select hyperlinks, added a new presentation to the relevant list

--- a/publications.yml
+++ b/publications.yml
@@ -38,3 +38,7 @@
   File: "[Link](/pdf/2025_Chroma_The-curiously-long-journey.pdf)"
   Year: 2025
   categories: [Presentation]
+- Title: " Skarabela, B. (2025, June 19–20). *Czeching the grammar: How do children learn complex morphosyntax?* LangInLife ISAB conference, Brno, Czech Republic."
+  File:
+  Year: 2025
+  categories: [Presentation]
