--- a/publications.yml
+++ b/publications.yml
@@ -38,7 +38,7 @@
   File: "[Link](/pdf/2025_Chroma_The-curiously-long-journey.pdf)"
   Year: 2025
   categories: [Presentation]
-- Title: " Skarabela, B. (2025, June 19–20). *Czeching the grammar: How do children learn complex morphosyntax?* LangInLife ISAB conference, Brno, Czech Republic."
-  File:
+- Title: "Skarabela, B. (2025, June 19–20). *Czeching the grammar: How do children learn complex morphosyntax?* LangInLife ISAB conference, Brno, Czech Republic."
+  File: "[Link](/pdf/2025_Skarabela_LangInLife_ISAB_Brno.pdf)"
   Year: 2025
   categories: [Presentation]
